- helptext file fully translated
- more translations throughout
-  fixed some typos

--- a/Translations/German/text-bonus-change.xml
+++ b/Translations/German/text-bonus-change.xml
@@ -92,7 +92,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_TRIBE_TRUCE_LEGITIMACY</zType>
-		<Translation>Waffenstillstand mit einem Stamm</Translation>
+		<Translation>Waffenruhe mit einem Stamm</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_TRIBE_PEACE_LEGITIMACY</zType>
