--- a/Translations/German/text-eventStory-change.xml
+++ b/Translations/German/text-eventStory-change.xml
@@ -149,7 +149,7 @@ Wen soll {CHARACTER-SHORT-1} heiraten?</Translation>
 		<Translation><![CDATA[Es ist ein Tag für wundervolle Nachrichten!
 
 Euer {RELATIVE-2} und Erbe, {CHARACTER-2}, wurde geboren!
-Unser großer general, {CHARACTER-0}, hat einen ausschlaggebend Sieg errungen.
+Unser großer Feldherr, {CHARACTER-0}, hat einen ausschlaggebend Sieg errungen.
 Euer Lieblingspferd hat das alljährliche Tunier gewonnen.
 
 Was sollen wir zuerst feiern?]]></Translation>
