--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -1471,11 +1471,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_DIPLO_OFFER_ASK_FAVOR_SCHEMER_TITLE</zType>
-		<Translation>An Urgent Matter!</Translation>
+		<Translation>Eine dringende Angelegenheit!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_DIPLO_OFFER_ASK_FAVOR_HERO_TITLE</zType>
-		<Translation>War Games</Translation>
+		<Translation>Kriegsspiele</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_DIPLO_OFFER_ASK_FAVOR_TITLE_COPY</zType>
@@ -1515,11 +1515,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_ABANDONED_SUPPLIES_TITLE</zType>
-		<Translation>Abandoned Supplies</Translation>
+		<Translation>Aufgegebene Vorräte</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CAPTURED_PRISONERS_TITLE</zType>
-		<Translation>Captured Prisoners</Translation>
+		<Translation>Gefangene Häftlinge</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_INACCURATE_TROOPS_TITLE</zType>
@@ -1531,15 +1531,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_HONOR_AND_GLORY_TITLE</zType>
-		<Translation><![CDATA[Honor and Glory]]></Translation>
+		<Translation><![CDATA[Ehre und Ruhm]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_THE_PEOPLES_GENERAL_TITLE</zType>
-		<Translation>The People's General</Translation>
+		<Translation>Feldherr des Volkes</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CAPTURED_GENERAL_TITLE</zType>
-		<Translation>Captured General</Translation>
+		<Translation>Gefangengenommener Feldherr</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_FACIAL_WOUND_TITLE</zType>
