--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -29,7 +29,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_CULTURAL_PAGEANT</zType>
-		<Translation>Cultural Pageant</Translation>
+		<Translation>Kultureller Festzug</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_CRUMBLING_ZIGGURAT</zType>
@@ -93,7 +93,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_NEIGHBORS_FEAST_PERSIA</zType>
-		<Translation>Jährlicher Festtag für persische Gäaste</Translation>
+		<Translation>Jährlicher Festtag für persische Gäste</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_MISTHOPHORIA</zType>
@@ -105,7 +105,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_FOREIGN_FIGHTERS</zType>
-		<Translation>Ausländsiche Krieger</Translation>
+		<Translation>Ausländische Krieger</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_WAR_COUNCIL</zType>
@@ -177,19 +177,19 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_LOCAL_ASCETIC</zType>
-		<Translation>Local Ascetic</Translation>
+		<Translation>Einheimischer Asket</Translation>
 	</Entry>
 	<Entry>
-    <zType>TEXT_PROJECT_AUTONOMOUS_RULE</zType>
-    <Translation>Autonome Herrschaft</Translation>
+		<zType>TEXT_PROJECT_AUTONOMOUS_RULE</zType>
+		<Translation>Autonome Herrschaft</Translation>
 	</Entry>  
 	<Entry>
-    <zType>TEXT_PROJECT_MONUMENTAL_GATE</zType>
-    <Translation>Monumentales Tor</Translation>
+		<zType>TEXT_PROJECT_MONUMENTAL_GATE</zType>
+		<Translation>Monumentales Tor</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_LEVIATHAN</zType>
-		<Translation>Leviathan Skull</Translation>
+		<Translation>Giganten Schädel</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_GODS_CONSORT_CULT</zType>
@@ -201,23 +201,23 @@
 	</Entry>
     <Entry>
 		<zType>TEXT_PROJECT_WORK_OF_ART</zType>
-		<Translation>Work of Art</Translation>
+		<Translation>Kunstwerk</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PIRACY_SUPPRESSION</zType>
-		<Translation>Piracy Suppression</Translation>
+		<Translation>Piraterie Unterdrückung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_COHORTES</zType>
-		<Translation>Urban Cohorts</Translation>
+		<Translation>Stadt-Kohorten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_HUNT_KILLER</zType>
-		<Translation>Hunt for the Killer</Translation>
+		<Translation>Jagd auf den Mörder</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_STATUE_OF_DIONYSUS</zType>
-		<Translation>Statue of Dionysus</Translation>
+		<Translation>Statue von Dionysus</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_COLLEGES</zType>
