--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -608,7 +608,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_FAMILY_HEAD</zType>
-		<Translation>Familienoberhaupt</Translation>
+		<Translation>Familienanführer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_FAMILY_ACTIONS_LIVING_MEMBERS_TITLE</zType>
@@ -620,7 +620,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_RELIGION_HEAD</zType>
-		<Translation>Religionsoberhaupt Head</Translation>
+		<Translation>Religionsoberhaupt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_PLAYER_SUCCESSION</zType>
