--- a/Translations/German/text-playerOption-change.xml
+++ b/Translations/German/text-playerOption-change.xml
@@ -59,15 +59,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_SHOW_ORDERS_COST</zType>
-		<Translation>Show Orders Cost</Translation>
+		<Translation>Zeige Befehl Kosten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_SHOW_ORDERS_COST_DESC</zType>
-		<Translation>Show Orders Cost instead of Orders left for each move</Translation>
+		<Translation>Zeige Befehl Kosten anstatt wieviele Befehle noch für diesen Zug übrig sind.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_HIDE_MINIMAP</zType>
-		<Translation>Hide Minimap</Translation>
+		<Translation>Verstecke Minimap</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_HIDE_MINIMAP_DESC</zType>
@@ -75,7 +75,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_HIDE_COUNCIL</zType>
-		<Translation>Hide Council</Translation>
+		<Translation>Verstecke Hofrat</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_HIDE_COUNCIL_DESC</zType>
@@ -147,7 +147,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_MUTE_AUDIO</zType>
-		<Translation>Mute</Translation>
+		<Translation>Stumm</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_MUTE_AUDIO_DESC</zType>
@@ -163,7 +163,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_AZERTY_KEYBOARD</zType>
-		<Translation>AZERTY Keyboard</Translation>
+		<Translation>AZERTY Tastatur</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_AZERTY_KEYBOARD_DESC</zType>
