- fixed a smal lsetup screen translation

--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -1932,7 +1932,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
     </Entry>
 	<Entry>
 		<zType>TEXT_SP_SETUP_TABS_SETUP_ARCHETYPE</zType>
-		<Translation>Leader Archetype</Translation>
+		<Translation>Oberhaupt Archetyp</Translation>
 	</Entry>
     <!--random-->
     <Entry>
