--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -118,7 +118,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_FAMILY_SEAT</zType>
-		<Translation>Famiilien Sitz Seat~ein Familien Sitz ~Familien Sitze</Translation>
+		<Translation>Famiilien Sitz~ein Familien Sitz~Familien Sitze</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_FAMILY</zType>
